# devaccel-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260319_0001_create_core_tables.py  20260320_0002_add_job_error_message.py  20260328_0003_add_flaky_test_ci_metadata.py  20260427_0004_add_observability_correlations.py
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  log_context.py  logging.py
app/lambdas/: sqs_step_functions_handler.py
app/models/: __init__.py  flaky_test.py  observability.py  pull_request.py
app/schemas/: async_dispatch.py  flaky_test.py  observability.py  pull_request.py
app/services/: async_dispatch.py  cloudwatch_logs.py  exceptions.py  flaky_triage.py  github.py  github_app_auth.py  github_pr_content.py  llm.py  llm_prompts.py  observability.py  pr_analysis.py  sqs_step_functions_consumer.py  sqs_step_functions_dispatcher.py  step_functions_dispatcher.py  task_dispatcher.py  workflows.py
app/tasks/: flaky_triage.py  pr_analysis.py
app/workers/: celery_app.py
docs/: architecture.md  development-roadmap.md
examples/github-actions/: flaky-triage-forwarder.yml
secrets/: devaccel-ai.2026-03-27.private-key.pem
tests/: conftest.py  test_api_flaky_tests.py  test_api_github_webhook.py  test_api_pull_requests.py  test_cloudwatch_logs.py  test_lambda_sqs_step_functions_handler.py  test_observability.py  test_services.py  test_tasks_flaky_triage.py  test_tasks_pr_analysis.py
(+3 files in other folders)
